# orange-app

./: package-lock.json  package.json
.github/workflows/: build.yaml
src/: App.vue  index.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  main.rs
src-tauri/src/api/: mod.rs
src-tauri/src/device/: conn.rs  mod.rs  proto.rs
src-tauri/src/utils/: mod.rs
src/components/: Bill.vue  Coin.vue  OTA.vue  PickDoor.vue  Sensor.vue  SerialPort.vue  Status.vue  VideoTest.vue
src/components/part/: BillMan.vue  BillStatus.vue  CoinMan.vue  CoinStatus.vue  SensorState.vue
src/conn/: codec.ts  device.ts  error.ts  notify_ack.ts  proto.ts  receive.ts  service.ts  status.ts  win.ts
src/page/: MDB.vue  Motor.vue  Setting.vue
src/style/: app.css  popup.css
src/utils/: Popup.ts  dialog.ts  html_ele.ts  util.ts
